--- a/package.json
+++ b/package.json
@@ -97,10 +97,11 @@
     "tailwindcss": "^2.2.19",
     "typescript": "^4.6.4",
     "unplugin-vue-components": "^0.17.21",
-    "vite": "^2.9.8",
+    "vite": "^4.3.9",
     "vite-plugin-compression": "^0.3.6",
     "vite-plugin-html": "^2.1.2",
     "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-pwa": "^0.16.3",
     "vite-plugin-style-import": "^1.4.1",
     "vue-eslint-parser": "^7.11.0"
   },
